--- a/forms.html
+++ b/forms.html
@@ -19,9 +19,15 @@
     <label for="end">Endereço: </label> <br>
     <input id="end" name="end" size="50" maxlength="30" value="Valor padrao">
     <br>
+    <label>Quais frutas você mais gosta?</label><br>
+    <input id="l" type="checkbox" name="l" value="l"> 
+    <label for="l">Laranja</label> <br>
+    <input id="p" type="checkbox" name="p" value="p" checked> 
+    <label for="p">Pera</label><br> 
+    <input id="m" type="checkbox" name="m" value="m"> 
+    <label for="m">Melancia</label><br>
     <input type="submit" value="enviar form">
     <input type="reset" value="Limpar">
-
 
 </form>
 
